syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "./pb";

service UserService {
  rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DestroyUser(DestroyUserRequest) returns (google.protobuf.Empty) {}
}

message GetUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserResponse {
  User users = 1;
}

message CreateUserRequest {
  string last_name = 1;
  string first_name = 2;
}

message CreateUserResponse {
  User users = 1;
}

message UpdateUserRequest {
  uint64 id = 1;
  string last_name = 2;
  string first_name = 3;
}

message UpdateUserResponse {
  User users = 1;
}

message DestroyUserRequest {
  uint64 id = 1;
}

message User {
  uint64 id = 1;
  string last_name = 2;
  string first_name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
